[package]
name = "keccak"
version = "0.1.1"
authors = ["RustCrypto Developers"]
license = "CC0-1.0"
description = "Keccak sponge function"
documentation = "https://docs.rs/keccak"
repository = "https://github.com/RustCrypto/sponges"
keywords = ["crypto", "sponge", "keccak", "keccak-f", "keccak-p"]
categories = ["cryptography", "no-std"]

[dependencies]
num-traits = { version = "0.2.14", default-features = false }

[features]
no_unroll = []
